# PPAR

./: .gitignore  PVM_864118 Cooper Goen_Example report copy.numbers  README.md  app.py  excel_processor.py  pdf_processor.py  pyproject.toml  requirements-deploy.txt  requirements.txt  run_app.bat  run_app.sh  setup.bat  setup.sh
