[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ppa-excel-processor"
version = "1.0.0"
description = "Excel File Processor - Streamlit App"
authors = [
    {name = "PPA Team"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "xlsxwriter>=3.1.0",
    "reportlab>=4.0.0",
    "typing-extensions>=4.0.0",
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",
    "six>=1.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
